customer-ticket/customer-support-ticket-priority-agentforce/force-app/main/default/objects/Support_Ticket_Intelligence__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <description>Date on which the support ticket was created.</description>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>