customer-ticket/customer-support-ticket-priority-agentforce/force-app/main/default/objects/Support_Ticket_Intelligence__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related customer account for the support ticket.</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Support Ticket Intelligences</relationshipLabel>
    <relationshipName>Support_Ticket_Intelligences</relationshipName>
    <type>Lookup</type>
</CustomField>