customer-ticket/customer-support-ticket-priority-agentforce/force-app/main/default/objects/Support_Ticket_Intelligence__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of the customer support issue.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>