customer-ticket/customer-support-ticket-priority-agentforce/force-app/main/default/objects/Support_Ticket_Intelligence__c/fields/Resolution_Time_hrs__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time_hrs__c</fullName>
    <description>Time taken to resolve the support ticket in hours.</description>
    <label>Resolution Time (hrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>